polish park api integration

--- a/.env.local.example
+++ b/.env.local.example
@@ -36,9 +36,15 @@ OCPDB_SECRET_KEY=
 # order to prevent escaping issues (eg: 32 chars alphanumeric).
 OCPDB_OBJECT_ID_SECRET=
 
+# Public OCPDB URL
+OCPDB_PROJECT_URL=https://dev-ipl.mobidata-bw.de/ocpdb
+
 # A random password which will be used for the postgresql database which is used by ParkAPI. Should be long and should not contain special
 # signs.
 PARK_API_POSTGRES_PASSWORD=
 
 # A secret key used for Flask. Should be long and should not contain special signs.
 PARK_API_SECRET_KEY=
+
+# Public ParkAPI URL
+PARK_API_PROJECT_URL=https://dev-ipl.mobidata-bw.de/park-api
