Add caddy webserver

--- a/.env
+++ b/.env
@@ -85,3 +85,6 @@ PARK_API_POSTGRES_HOST=park-api-db
 PARK_API_CELERY_BROKER_URL=amqp://park-api-rabbitmq
 PARK_API_IMAGE=ghcr.io/mobidata-bw/park-api-v3:latest
 PARK_API_DB_IMAGE=postgis/postgis:15-3.4-alpine
+
+# Caddy 
+CADDY_IMAGE=caddy:2.7.5-alpine
