--- a/.env
+++ b/.env
@@ -74,6 +74,7 @@ OCPDB_CELERY_BROKER_URL=amqp://ocpdb-rabbitmq
 OCPDB_PRIVACY_URL=https://www.nvbw.de/datenschutz
 OCPDB_LEGAL_NOTICE_URL=https://www.nvbw.de/impressum
 OCPDB_IMAGE=ghcr.io/binary-butterfly/ocpdb:latest
+OCPDB_DB_IMAGE=postgis/postgis:15-3.4-alpine
 
 # ParkAPI
 PARK_API_API_PORT=7500
@@ -82,3 +83,4 @@ PARK_API_POSTGRES_DB=park-api
 PARK_API_POSTGRES_HOST=park-api-db
 PARK_API_CELERY_BROKER_URL=amqp://park-api-rabbitmq
 PARK_API_IMAGE=ghcr.io/mobidata-bw/park-api-v3:latest
+PARK_API_DB_IMAGE=postgis/postgis:15-3.4-alpine
