first steps to rootless

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,7 @@
+# UID and GID of the user which should be used to run most services in common uid:gid format. Often something like 1000:1000
+# You can determine your this line with your own uid and gid by `echo "DOCKER_LOCAL_USER=$(shell id -u):$(shell id -g)"`
+DOCKER_LOCAL_USER=
+
 # A random password for the lamassu admin user. Should be long and should not contain special signs.
 LAMASSU_ADMIN_PASSWORD=
 
@@ -40,6 +44,9 @@ IPL_POSTGRES_PASSWORD=password
 GEOSERVER_PROXY_BASE_URL=https://dev-ipl.mobidata-bw.de/geoserver
 # A random password for geoserver admin access
 GEOSERVER_ADMIN_PASSWORD=FNn71ymEeBJ13VHd
+
+# Public GTFS API URL
+GTFS_API_PROJECT_URL=https://dev-ipl.mobidata-bw.de/gtfs
 
 # A random password which will be used for the postgresql database which is used by OCPDB. Should be long and should not contain special
 # signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
