gtfs-db: use custom Docker image including pg_plan_filter
https://github.com/mobidata-bw/postgis-with-pg-plan-filter
https://github.com/pgexperts/pg_plan_filter

--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ DAGSTER_POSTGRES_DB=postgres_db
 IPL_LAMASSU_BASE_URL=http://lamassu:8080
 
 # gtfs-db variables
-IPL_GTFS_DB_IMAGE=postgis/postgis:15-3.3-alpine
+IPL_GTFS_DB_IMAGE=ghcr.io/mobidata-bw/postgis-with-pg-plan-filter
 IPL_GTFS_DB_POSTGRES_USER=postgres
 IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
