gtfs-api: connect with "postgrest" DB user
gtfs-via-postgres@4.8.1 adds support for $POSTGREST_PASSWORD

--- a/.env
+++ b/.env
@@ -45,6 +45,9 @@ IPL_GTFS_DB_POSTGRES_USER=postgres
 IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
 IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
+# `postgrest` role used by the gtfs-api service (PostgREST)
+IPL_GTFS_DB_POSTGREST_USER=postgrest
+IPL_GTFS_DB_POSTGREST_PASSWORD=password
 
 # pgbouncer variables
 PGBOUNCER_IMAGE=bitnami/pgbouncer:1
