copy changes from main branch

--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ LAMASSU_PORT=8500
 LAMASSU_ADMIN_PORT=9002
 LAMASSU_ADMIN_PASSWORD=secret
 LAMASSU_BASE_URL=http://lamassu:8080
+# Authentication URLs for providers requiring OAuth2 authentication
+LAMASSU_BOLT_AUTH_URL=https://mds.bolt.eu/oauth2/token
 LAMASSU_TIER_AUTH_URL=https://auth.tier-services.io/oauth2/aus41nfrunfKbXbOr417/v1/token
 
 # redis variables
@@ -24,6 +26,7 @@ X2GBFS_IMAGE=ghcr.io/mobidata-bw/x2gbfs:latest
 DEER_API_URL=https://deer.fleetster.de
 DEER_USER=api_user@nvbw.de
 DEER_PASSWORD=secret
+VOI_API_URL=https://lsd.raumobil.net/Broker/grid?platform=mobidata-bw&source=voi&type=eScooter&hashes=u0ty,u0tz
 
 # dagster variables
 DAGSTER_POSTGRES_IMAGE=postgres:15.4-bullseye
@@ -44,6 +47,11 @@ IPL_GTFS_DB_POSTGRES_PASSWORD=password
 IPL_GTFS_DB_POSTGRES_DB=gtfs_importer
 IPL_GTFS_DB_POSTGRES_DB_PREFIX=gtfs
 
+# pgbouncer variables
+PGBOUNCER_IMAGE=bitnami/pgbouncer:1
+PGBOUNCER_POSTGRES_PORT=6432
+PGBOUNCER_POSTGRES_USER=postgres
+
 # gtfs-api variables
 IPL_GTFS_API_PORT=4000
 # todo
@@ -63,3 +71,26 @@ GEOSERVER_INITIAL_MEMORY=512M
 GEOSERVER_MAXIMUM_MEMORY=4G
 # In prod, should switch to PRODUCTION_LOGGING. For other logging profiles see: https://docs.geoserver.org/stable/en/user/configuration/globalsettings.html#config-globalsettings-log-profile
 GEOSERVER_LOGGING_PROFILE=DEFAULT_LOGGING
+
+# ocpdb
+OCPDB_API_PORT=7000
+OCPDB_POSTGRES_USER=ocpdb
+OCPDB_POSTGRES_DB=ocpdb
+OCPDB_POSTGRES_HOST=ocpdb-db
+OCPDB_CELERY_BROKER_URL=amqp://ocpdb-rabbitmq
+OCPDB_PRIVACY_URL=https://www.nvbw.de/datenschutz
+OCPDB_LEGAL_NOTICE_URL=https://www.nvbw.de/impressum
+OCPDB_IMAGE=ghcr.io/binary-butterfly/ocpdb:latest
+OCPDB_DB_IMAGE=postgis/postgis:15-3.4-alpine
+
+# ParkAPI
+PARK_API_API_PORT=7500
+PARK_API_POSTGRES_USER=park-api
+PARK_API_POSTGRES_DB=park-api
+PARK_API_POSTGRES_HOST=park-api-db
+PARK_API_CELERY_BROKER_URL=amqp://park-api-rabbitmq
+PARK_API_IMAGE=ghcr.io/mobidata-bw/park-api-v3:latest
+PARK_API_DB_IMAGE=postgis/postgis:15-3.4-alpine
+
+# Caddy 
+CADDY_IMAGE=caddy:2.7.5-alpine
