copy changes from main branch

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,17 +9,53 @@ LAMASSU_BASE_URL=http://10.70.172.11:8500
 LAMASSU_DB_CONNECT_CLIENT_ID=client
 LAMASSU_DB_CONNECT_API_KEY=secret
 
+# Credentials for BOLT API.
+LAMASSU_BOLT_CLIENT_ID=<fill in client id>
+LAMASSU_BOLT_CLIENT_PASSWORD=<fill in password>
+
 # Credentials for Tier API.
 LAMASSU_TIER_CLIENT_ID=<fill in client id>
 LAMASSU_TIER_CLIENT_PASSWORD=<fill in password>
 
+# x2gbfs Credentials
 # User and password from Deer
 DEER_USER=
 DEER_PASSWORD=
+# User and password from VOI/Raumobil
+VOI_USER=
+VOI_PASSWORD=
+
+# A random password for pgbouncer clients (gtfs-api, geoserver, dagster, etc.)
+PGBOUNCER_POSTGRES_PASSWORD=XP1EdA6S0BHmybkC
 
 # A random password which will be used for the postgresql database which is used by Dagster. Should be long and should not contain special
-# signs.
-DAGSTER_POSTGRES_PASSWORD=
+# signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
+DAGSTER_POSTGRES_PASSWORD=boapaLEspBg6qhY8
 
 # A random password for geoserver admin access
 GEOSERVER_ADMIN_PASSWORD=FNn71ymEeBJ13VHd
+
+# A random password which will be used for the postgresql database which is used by OCPDB. Should be long and should not contain special
+# signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
+OCPDB_POSTGRES_PASSWORD=secret
+
+# A secret key used for Flask. Should be long and should not contain special signs in order to prevent escaping issues (eg: 32 chars
+# alphanumeric).
+OCPDB_SECRET_KEY=secret
+
+# A secret key needed for some OCPDB data sources to create reproducable UIDs.  Should be long and should not contain special signs in
+# order to prevent escaping issues (eg: 32 chars alphanumeric).
+OCPDB_OBJECT_ID_SECRET=secret
+
+# Public OCPDB URL
+OCPDB_PROJECT_URL=https://dev-ipl.mobidata-bw.de/ocpdb
+
+# A random password which will be used for the postgresql database which is used by ParkAPI. Should be long and should not contain special
+# signs.
+PARK_API_POSTGRES_PASSWORD=secret
+
+# A secret key used for Flask. Should be long and should not contain special signs.
+PARK_API_SECRET_KEY=secret
+
+# Public ParkAPI URL
+PARK_API_PROJECT_URL=https://dev-ipl.mobidata-bw.de/park-api
