--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -490,9 +490,8 @@ services:
     ports:
       - ${IPL_GTFS_SWAGGER_UI_PORT}:8080
     environment:
-      # Swagger UI will call gtfs-api in the browser, so we need to use its "outside" port here.
-      # todo: localhost -> dev-ipl.mobidata-bw.de
-      API_URL: http://localhost:${IPL_GTFS_API_PORT}
+      # Swagger UI will call gtfs-api in the browser, so we need to use its "outside" URL here.
+      API_URL: ${IPL_GTFS_API_PUBLIC_BASE_URL}
       BASE_URL: /docs/gtfs
     labels:
       - "traefik.enable=true"
