ParkAPI: enable OpenAPI spec, configure public base URL

--- a/etc/park-api/config.yaml
+++ b/etc/park-api/config.yaml
@@ -5,3 +5,7 @@ PARK_API_CONVERTER:
   - heilbronn
   - karlsruhe
   - mannheim
+
+OPENAPI_SERVERS:
+  - url: https://dev-ipl.mobidata-bw.de/park-api
+    description: staging
