fix: gtfs-api: use correct public OpenAPI base URL
follow-up of 1191180

--- a/.env
+++ b/.env
@@ -53,7 +53,7 @@ PGBOUNCER_POSTGRES_USER=postgres
 
 # gtfs-api variables
 IPL_GTFS_API_PORT=4000
-IPL_GTFS_API_PUBLIC_BASE_URL=https://ipl-dev.mobidata-bw.de/gtfs/
+IPL_GTFS_API_PUBLIC_BASE_URL=https://dev-ipl.mobidata-bw.de/gtfs/
 
 # gtfs-swagger-ui variables
 IPL_GTFS_SWAGGER_UI_PORT=4001
