--- a/.env
+++ b/.env
@@ -59,12 +59,9 @@ IPL_GTFS_API_PUBLIC_BASE_URL=http://localhost:8080/gtfs
 IPL_GTFS_SWAGGER_UI_PORT=4001
 
 # Geoserver variables
-GEOSERVER_PROXY_BASE_URL=http://localhost:8080/geoserver
-GEOSERVER_IMAGE=kartoza/geoserver:2.22.4--v2023.08.26
+GEOSERVER_PROXY_BASE_URL=http://localhost:8600/geoserver
+GEOSERVER_IMAGE=geosolutionsit/geoserver:2.24.1
 GEOSERVER_PORT=8600
-GEOSERVER_DATA_DIR=/geoserver/data_dir
-GEOWEBCACHE_CACHE_DIR=/geoserver/cache_dir
-GEOSERVER_ADMIN_USER=admin
 GEOSERVER_INITIAL_MEMORY=512M
 GEOSERVER_MAXIMUM_MEMORY=4G
 # In prod, should switch to PRODUCTION_LOGGING. For other logging profiles see: https://docs.geoserver.org/stable/en/user/configuration/globalsettings.html#config-globalsettings-log-profile
