--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -229,12 +229,15 @@ services:
   geoserver:
     networks: [ipl]
     image: ${GEOSERVER_IMAGE}
+    user: 1000:1000
     volumes:
       # var/geoserver defaults to geoserver/data_dir, custom config shall explicitly be defined in etc/geoserver
-      - ./var/geoserver/:/opt/geoserver/data_dir/
-      - ./etc/geoserver/global.xml:/opt/geoserver/data_dir/global.xml
-      - ./etc/geoserver/logging.xml:/opt/geoserver/data_dir/logging.xml
-      - ./etc/geoserver/workspaces:/opt/geoserver/data_dir/workspaces
+      - ./var/geoserver/datadir/:/var/geoserver/datadir/
+      - ./var/geoserver/logs/:/var/geoserver/logs/
+      - ./var/geoserver/gwc_cache_dir/:/var/geoserver/gwc_cache_dir/
+      - ./etc/geoserver/global.xml:/var/geoserver/datadir/global.xml
+      - ./etc/geoserver/logging.xml:/var/geoserver/datadir/logging.xml
+      - ./etc/geoserver/workspaces:/var/geoserver/datadir/workspaces
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.geoserver.rule=PathPrefix(`/geoserver`)"
@@ -243,17 +246,36 @@ services:
       - ${GEOSERVER_PORT}:8080
     environment:
       # Special env vars picked up by the kartoza/geoserver Docker image, getting passed in as Java system properties (`-D`).
-      - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
-      - GEOSERVER_ADMIN_USER=${GEOSERVER_ADMIN_USER}
+      - ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
       - INITIAL_MEMORY=${GEOSERVER_INITIAL_MEMORY}
       - MAXIMUM_MEMORY=${GEOSERVER_MAXIMUM_MEMORY}
       - GEOSERVER_LOGGING_PROFILE=${GEOSERVER_LOGGING_PROFILE}
-      - TIMEZONE=Europe/Berlin
-      # to provide env variables, see https://docs.geoserver.org/stable/en/user/datadirectory/configtemplate.html
-      # kartoza/geoserver maps PROXY_BASE_URL_PARAMETRIZATION to ALLOW_ENV_PARAMETRIZATION, see https://github.com/kartoza/docker-geoserver/blob/844c7a26acd1687358c821ea73117a721f25f7b6/scripts/entrypoint.sh#L72
-      - PROXY_BASE_URL_PARAMETRIZATION=true
-      # The following parameters are *not* picked up by kartoza/geoserver, but instead passed through as "regular" env vars, and then read by Geoserver whenever one of the config files references them.
       - GEOSERVER_PROXY_BASE_URL=${GEOSERVER_PROXY_BASE_URL:?missing/empty $$GEOSERVER_PROXY_BASE_URL}
+      # All we want to do is set user.timezone and DALLOW_ENV_PARAMETRIZATION. Due to https://github.com/geosolutions-it/docker-geoserver/issues/133
+      # we currently need to pass in all default properties already defined in the dockerfile
+      - JAVA_OPTS= >-
+          -Duser.timezone=Europe/Berlin
+          -DALLOW_ENV_PARAMETRIZATION=true
+          -Xms$${INITIAL_MEMORY} 
+          -Xmx$${MAXIMUM_MEMORY}
+          -Djava.awt.headless=true 
+          -server
+          -Dfile.encoding=UTF8
+          -Djavax.servlet.request.encoding=UTF-8
+          -Djavax.servlet.response.encoding=UTF-8
+          -XX:SoftRefLRUPolicyMSPerMB=36000
+          -XX:+UseG1GC
+          -XX:MaxGCPauseMillis=200
+          -XX:ParallelGCThreads=20
+          -XX:ConcGCThreads=5
+          -Dorg.geotools.coverage.jaiext.enabled=$${JAIEXT_ENABLED}
+          -Dorg.geotools.shapefile.datetime=true
+          -DGEOSERVER_LOG_LOCATION=$${GEOSERVER_LOG_LOCATION}
+          -DGEOWEBCACHE_CONFIG_DIR=$${GEOWEBCACHE_CONFIG_DIR}
+          -DGEOWEBCACHE_CACHE_DIR=$${GEOWEBCACHE_CACHE_DIR}
+          -DNETCDF_DATA_DIR=$${NETCDF_DATA_DIR}
+          -DGRIB_CACHE_DIR=$${GRIB_CACHE_DIR}
+      # The following parameters are *not* picked up by geosoultionsit/geoserver, but instead passed through as "regular" env vars, and then read by Geoserver whenever one of the config files references them.
       - PGBOUNCER_POSTGRES_USER=${PGBOUNCER_POSTGRES_USER:?missing/empty $$PGBOUNCER_POSTGRES_USER}
       - PGBOUNCER_POSTGRES_PASSWORD=${PGBOUNCER_POSTGRES_PASSWORD:?missing/empty $$PGBOUNCER_POSTGRES_PASSWORD}
       - PARK_API_POSTGRES_PASSWORD=${PARK_API_POSTGRES_PASSWORD?missing/empty $$PARK_API_POSTGRES_PASSWORD}
@@ -265,7 +287,7 @@ services:
         # For parking_sites layer
         condition: service_healthy
     healthcheck:
-      test: "curl -fsS -o /dev/null -u '${GEOSERVER_ADMIN_USER}':'${GEOSERVER_ADMIN_PASSWORD}' http://localhost:8080/geoserver/rest/about/version.xml"
+      test: "curl -fsS -o /dev/null -u 'admin:${GEOSERVER_ADMIN_PASSWORD}' http://localhost:8080/geoserver/rest/about/version.xml"
       interval: 0m15s
       timeout: 10s
       retries: 15
