fix: ParkApi: skip Karlsruhe scraper for now
related: https://github.com/ParkenDD/ParkAPI2-sources/issues/40

--- a/etc/park-api/config.yaml
+++ b/etc/park-api/config.yaml
@@ -3,7 +3,8 @@ PARK_API_CONVERTER:
   - freiburg
   - heidelberg
   - heilbronn
-  - karlsruhe
+  # Karlsruhe currently fails, see https://github.com/ParkenDD/ParkAPI2-sources/issues/40
+  # - karlsruhe
   - mannheim
 
 OPENAPI_SERVERS:
