fix: geoserver: explicitly configure public base URL
This fixed a HTTP/HTTPS mixed content error when logging in using the browser.
This also switches the XML schema URLs in WFS responses from http: to https:.

--- a/.env.local.example
+++ b/.env.local.example
@@ -31,6 +31,8 @@ IPL_GTFS_API_PUBLIC_BASE_URL=https://dev-ipl.mobidata-bw.de/gtfs
 # signs in order to prevent escaping issues (eg: 32 chars alphanumeric).
 DAGSTER_POSTGRES_PASSWORD=boapaLEspBg6qhY8
 
+# Public Geoserver URL
+GEOSERVER_PROXY_BASE_URL=https://dev-ipl.mobidata-bw.de/geoserver
 # A random password for geoserver admin access
 GEOSERVER_ADMIN_PASSWORD=FNn71ymEeBJ13VHd
 
