--- a/.env
+++ b/.env
@@ -62,6 +62,7 @@ IPL_GTFS_API_PUBLIC_BASE_URL=http://localhost:8080/gtfs
 IPL_GTFS_SWAGGER_UI_PORT=4001
 
 # Geoserver variables
+GEOSERVER_PROXY_BASE_URL=http://localhost:8080/geoserver
 GEOSERVER_IMAGE=kartoza/geoserver:2.22.4--v2023.08.26
 GEOSERVER_PORT=8600
 GEOSERVER_DATA_DIR=/geoserver/data_dir
